@@ -29,6 +29,16 @@ Version 1.8.4 patchlevel 5                                 ??? ??,  2011
   char * to store a read-only copy of the current entry's key in, instead
   of a user-supplied buffer that may or may not be big enough.
 
+  notify.c has been rewritten, and notify_anything()'s args have changed.
+  To get the same behaviour, change:
+    notify_anything(speaker, func, data, nospoof_func, flags, message);
+  to
+    notify_anything(speaker, func, data, NULL, flags, message, NULL, 
+                    AMBIGUOUS, NULL);
+  If nospoof_func is NULL, make sure you include NA_SPOOF in the new flags.
+  Many other functions in notify.c have also changed - check the comments
+  on the functions for more info on the new arguments.
+
 Version 1.8.4 patchlevel 4                                 May 05,  2011
 
   PE_REGS now contains switch, @switch, iter, @dol and env (%0-%9).
